src/css/pannellum.css
html {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    position: fixed;
    cursor: default;
    width: 100%;
    height: 100%;
    font-family: Helvetica, "Nimbus Sans L", "Liberation Sans", Arial, sans-serif;
    background: #f4f4f4 url('img/background.svg') repeat;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.grab {
    cursor: url('img/grab.svg') 12 8, default;
}

.grabbing {
    cursor: url('img/grabbing.svg') 12 8, default;
}

.sprite {
    background-image: url('img/sprites.svg');
}

#container {
    cursor: inherit;
}

#page {
    width: 100%;
    height: 100%;
}

.controls {
    position: absolute;
    background-color: #fff;
    border: 1px solid #999;
    border-color: rgba(0,0,0,0.4);
    border-radius: 3px;
    cursor: pointer;
}

.control:hover {
    background-color: #f8f8f8;
}

#zoomcontrols {
    top: 4px;
    left: 4px;
    width: 26px;
    height: 52px;
}

#zoom_in {
    width: 100%;
    height: 50%;
    position: absolute;
    top: 0;
    border-radius: 3px 3px 0 0;
}

#zoom_out {
    width: 100%;
    height: 50%;
    position: absolute;
    bottom: 0;
    background-position: 0 -26px;
    border-top: 1px solid #ddd;
    border-top-color: rgba(0,0,0,0.10);
    border-radius: 0 0 3px 3px;
}

#fullscreentoggle_button {
    top: 66px;
    left: 4px;
    width: 26px;
    height: 26px;
}

.fullscreentoggle_button_inactive {
    background-position: 0 -52px;
}

.fullscreentoggle_button_active {
    background-position: 0 -78px;
}

#panorama_info {
    position: absolute;
    bottom: 4px;
    background-color: rgba(0,0,0,0.7);
    border-radius: 0 3px 3px 0;
    padding-right: 10px;
    color: #fff;
    text-align: left;
    display: none;
}

#title_box {
    position: relative;
    font-size: 20px;
    display: table;
    padding-left: 5px;
    margin-bottom: 3px;
}

#author_box {
    position: relative;
    font-size: 12px;
    display: table;
    padding-left: 5px;
}

#load_box {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 200px;
    height: 150px;
    margin: -75px 0 0 -100px;
    background-color: rgba(0,0,0,0.7);
    border-radius: 3px;
    text-align: center;
    font-size: 20px;
    display: none;
    color: #fff;
}

#lbox {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 20px;
    height: 20px;
    margin: -10px 0 0 -10px;
    display: none;
}

.loading {
    animation-duration: 1.5s;
    -webkit-animation-duration: 1.5s;
    animation-name: mv;
    -webkit-animation-name: mv;
    animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    animation-timing-function: linear;
    -webkit-animation-timing-function: linear;
    height: 10px;
    width: 10px;
    background-color: #fff;
    position: relative;
}

@keyframes mv {
    from {left:0;top:0;}
    25% {left:10px;top:0;}
    50% {left:10px;top:10px;}
    75% {left:0;top:10px;}
    to {left:0;top:0;}
}

@-webkit-keyframes mv {
    from {left:0;top:0;}
    25% {left:10px;top:0;}
    50% {left:10px;top:10px;}
    75% {left:0;top:10px;}
    to {left:0;top:0;}
}

#load_button {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 200px;
    height: 100px;
    margin: -50px 0 0 -100px;
    background-color: rgba(0,0,0,.7);
    border-radius: 3px;
    text-align: center;
    font-size: 20px;
    display: table;
    color: #fff;
    cursor: pointer;
}

#load_button:hover {
    background-color: rgba(0,0,0,.8);
}

#load_button p {
    display: table-cell;
    vertical-align: middle;
}

.infobox {
    font-size: 15px;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 200px;
    height: 150px;
    margin: -75px 0 0 -100px;
    background-color: #000;
    border-radius: 3px;
    display: table;
    text-align: center;
    color: #fff;
}

.infobox p {
    display: table-cell;
    vertical-align: middle;
    padding: 0 5px 0 5px;
}

#nocanvas {
    display: none;
}

#about {
    font-size: 11px;
    line-height: 11px;
    color: #fff;
    padding: 5px 8px 5px 8px;
    background: rgba(0,0,0,0.7);
    border-radius: 3px;
    position: absolute;
    top: 50px;
    left: 50px;
    display: none;
    opacity: 0;
    -moz-transition: opacity .3s ease-in-out;
    -webkit-transition: opacity .3s ease-in-out;
    -o-transition: opacity .3s ease-in-out;
    -ms-transition: opacity .3s ease-in-out;
    transition: opacity .3s ease-in-out;
}

#about a:link, #about a:visited {
    color: #fff;
}

#about a:hover, #about a:active {
    color: #eee;
}

.hotspot {
    position: absolute;
    height: 26px;
    width: 26px;
    visibility: hidden;
    cursor: default;
    border-radius: 13px;
    vertical-align: middle;
    top: 0;
}
.hotspot:hover {
    background-color: rgba(255,255,255,0.2);
}
.hotspot.info {
    background-position: 0 -104px;
}
.hotspot.scene {
    background-position: 0 -130px;
}

div.tooltip span {
    visibility: hidden;
    position: absolute;
    border-radius: 3px;
    background-color: rgba(0,0,0,0.7);
    color: #fff;
    text-align: center;
    max-width: 200px;
    z-index: 10;
    padding: 5px 10px;
    margin-top: -41px;
    margin-left: -220px;
    cursor: default;
}
div.tooltip:hover span{
    visibility: visible;
}
div.tooltip:hover:after {
    content: '';
    position: absolute;
    width: 0;
    height: 0;
    border-width: 10px;
    border-style: solid;
    border-color: rgba(0,0,0,0.7) transparent transparent transparent;
    top: -12px;
    left: 3px;
}

#compass {
    width: 50px;
    height: 50px;
    right: 4px;
    bottom: 4px;
    border-radius: 25px;
    background-image: url('img/compass.svg');
    cursor: default;
    display: none;
}

.viewport {
    position: relative;
    float: left;
    overflow: hidden;
    width: 100%;
    height: 100%;
    -webkit-perspective: 700px;
    perspective: 700px;
}
.world {
    display: none;
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform-style: preserve-3d;
    transform-style: preserve-3d;
    -webkit-transform: translate3d(0px, 0px, 700px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
    transform: translate3d(0px, 0px, 700px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
}
.face {
    position: absolute;
    -webkit-transform-origin: 0 0 0;
    transform-origin: 0 0 0;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    height: 1002px;
    width: 1002px;
    background-size: 100% 100%;
}
.fface {
    -webkit-transform: translate3d(-501px, -501px, -500px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
    transform: translate3d(-501px, -501px, -500px) rotateX(0deg) rotateY(0deg) rotateZ(0deg);
}
.bface {
    -webkit-transform: translate3d(501px, -501px, 500px) rotateX(180deg) rotateY(0deg) rotateZ(180deg);
    transform: translate3d(501px, -501px, 500px) rotateX(180deg) rotateY(0deg) rotateZ(180deg);
}
.uface {
    -webkit-transform: translate3d(-501px, -500px, 501px) rotateX(270deg) rotateY(0deg) rotateZ(0deg);
    transform: translate3d(-501px, -500px, 501px) rotateX(270deg) rotateY(0deg) rotateZ(0deg);
}
.dface {
    -webkit-transform: translate3d(-501px, 500px, -501px) rotateX(90deg) rotateY(0deg) rotateZ(0deg);
    transform: translate3d(-501px, 500px, -501px) rotateX(90deg) rotateY(0deg) rotateZ(0deg);
}
.lface {
    -webkit-transform: translate3d(-500px, -501px, 501px) rotateX(180deg) rotateY(90deg) rotateZ(180deg);
    transform: translate3d(-500px, -501px, 501px) rotateX(180deg) rotateY(90deg) rotateZ(180deg);
}
.rface {
    -webkit-transform: translate3d(500px, -501px, -501px) rotateX(0deg) rotateY(270deg) rotateZ(0deg);
    transform: translate3d(500px, -501px, -501px) rotateX(0deg) rotateY(270deg) rotateZ(0deg);
}

.dragfix, #preview {
    position: absolute;
    height: 100%;
    width: 100%;
}

#preview {
    top: 0;
    left: 0;
    background-size: 100% 100%;
}

#lbar {
    width: 150px;
    margin: 0 auto;
    border: #fff 1px solid;
    height: 6px;
}

#lbar_fill {
    background: #fff;
    height: 100%;
    width: 0;
}

#lmsg {
    font-size: 12px;
}

